// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fixture Box Tests Player fixture box Snapshot test 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1ts116e"
    data-testid="fixture-box-container"
  >
    <div
      class="MuiBox-root css-xix88v"
      data-testid="fix-box-bg-171"
    >
      <div
        class="MuiBox-root css-19jcvzm"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
        >
          BUR (H)
        </p>
      </div>
    </div>
    <div
      class="MuiBox-root css-115njpp"
      data-testid="fix-box-bg-321"
    >
      <div
        class="MuiBox-root css-19jcvzm"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
        >
          LIV (H)
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Fixture Box Tests Team fixture box Snapshot test 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-1ts116e"
    data-testid="fixture-box-container"
  >
    <div
      class="MuiBox-root css-zi5v0h"
      data-testid="fix-box-bg-171"
    >
      <div
        class="MuiBox-root css-19jcvzm"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
        >
          AVL (A)
        </p>
      </div>
    </div>
    <div
      class="MuiBox-root css-zi5v0h"
      data-testid="fix-box-bg-321"
    >
      <div
        class="MuiBox-root css-19jcvzm"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1d9ye53-MuiTypography-root"
        >
          AVL (A)
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
